# QVst

cmake/: link_libs.cmake  parse_src.cmake
source/plugins/: CMakeLists.txt
source/plugins/b3_organ_vst3/: CMakeLists.txt  vst_sdk.cmake
source/plugins/b3_organ_vst3/include/: projectversion.h  version.h
source/plugins/b3_organ_vst3/source/: PluginEffect.cpp  PluginView.cpp  factory.cpp
source/qvst/common/: dllmain.cpp
source/qvst/include/: QVstHostedWidget.h
source/qvst/src/: QVstAudioEffect.cpp  QVstConsole.cpp  QVstEditorView.cpp  QVstHostedWidget.cpp  QVstParameterContainer.cpp
source/synth/include/: Instrument.h
